--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
     }
 
     buildTypes {
-        def appId = "<your app ID here>"  // Replace with proper Application ID
+        def appId = "y-zybag"  // Replace with proper Application ID
         debug {
             buildConfigField "String", "MONGODB_REALM_APP_ID", "\"${appId}\""
         }
