--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginActivity" />
+      <!--  <activity android:name=".ProjectActivity" /> -->
         <activity android:name=".TaskActivity" />
         <activity android:name=".MemberActivity" />
+
     </application>
 
 </manifest>
