--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name=".TaskActivity" />
         <activity android:name=".MemberActivity" />
+        <activity android:name=".RecipeActivity"/>
     </application>
 
 </manifest>
