--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProjectActivity">
+        <activity android:name=".RecipeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,9 +19,9 @@
         </activity>
         <activity android:name=".LoginActivity" />
       <!--  <activity android:name=".ProjectActivity" /> -->
-        <activity android:name=".TaskActivity" />
-        <activity android:name=".MemberActivity" />
+        <!--  <activity android:name=".TaskActivity" />-->
+        <!--  <activity android:name=".MemberActivity" />-->
 
-    </application>
+     </application>
 
-</manifest>
+ </manifest>
