--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".TaskActivity" />
+        <activity android:name=".RecipeActivity" />
         <activity android:name=".MemberActivity" />
         <activity android:name=".RecipeActivity"/>
     </application>
