--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,18 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'realm-android'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'realm-android'
+    id 'kotlin-android-extensions'
+}
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "29.0.2"
+    compileSdk 31
 
     defaultConfig {
-        applicationId "com.mongodb.tasktracker"
-        minSdkVersion 21
-        targetSdkVersion 30
+        applicationId "com.example.fitshare"
+        minSdk 21
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -19,7 +20,7 @@ android {
     }
 
     buildTypes {
-        def appId = "y-zybag"  // Replace with proper Application ID
+        def appId = "application-1-dubod"  // Replace with proper Application ID
         debug {
             buildConfigField "String", "MONGODB_REALM_APP_ID", "\"${appId}\""
         }
@@ -34,6 +35,10 @@ android {
         sourceCompatibility 1.11
         targetCompatibility 1.11
     }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 realm {
@@ -41,18 +46,13 @@ realm {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation "io.realm:android-adapters:4.0.0"
-    implementation "androidx.recyclerview:recyclerview:1.2.1"
-    testImplementation 'junit:junit:4.13.2'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    //Material Design
-    implementation 'com.google.android.material:material:1.3.0-alpha03'
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
