--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity
+            android:name=".WorkoutPlanActivity"
+            android:exported="false"
+            android:label="@string/title_activity_workout_plan"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".model.WorkoutPlanActivity"
+            android:exported="false"
+            android:label="@string/title_activity_workout_plan"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".model.WorkOutPlanActivity"
+            android:exported="false"
+            android:label="@string/title_activity_work_out_plan"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ProjectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,12 +32,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".RecipeActivity" />
         <activity android:name=".MemberActivity" />
-        <activity android:name=".RecipeActivity"/>
+        <activity android:name=".RecipeActivity" />
     </application>
 
 </manifest>
