--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FitShare">
         <activity
+            android:name=".AddRecipe"
+            android:exported="false" />
+        <activity
             android:name=".Recipe.RecipeActivity"
             android:exported="false" />
         <activity
