--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,7 @@ dependencies {
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.gms:play-services-location:11.8.0'
+    implementation 'com.google.android.gms:play-services-gcm:15.0.1'
+
 
 }
