added exercise object funtionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".WorkoutPlanActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
