--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,6 @@ android {
 
     buildTypes {
         def appId = "application-0-jyjpm"  // Replace with proper Application ID
-        //def appId = "application-1-dubod"
         debug {
             buildConfigField "String", "MONGODB_REALM_APP_ID", "\"${appId}\""
         }
@@ -62,4 +61,7 @@ dependencies {
     implementation "io.realm:android-adapters:4.0.0"
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    //Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
