--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,10 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".WorkoutPlanActivity"
+            android:name=".WorkOutPlan.WorkOutPlanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WorkOutPlan.ShoppingCartActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
