--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
     -->
 
 
-
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     
     <application
@@ -62,17 +63,13 @@
             </intent-filter>
         </activity>
 
-<<<<<<< HEAD
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".RecipeActivity" />
-        <activity android:name=".MemberActivity" />
-        <activity android:name=".RecipeActivity"/>
-=======
+
+
+
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
->>>>>>> jer_GM
+
     </application>
 
 </manifest>
