--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,8 +33,13 @@
             android:name=".WorkOutPlan.ShoppingCartActivity"
             android:exported="false" />
         <activity
+            android:name=".Messaging.MessageActivity"
+            android:exported="true"/>
+        <activity
             android:name=".LoginActivity"
-            android:exported="true">
+            android:exported="true" >
+
+
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
