--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,9 +29,15 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
+        <!--
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+        -->
+        <meta-data
+            android:value="@string/bryan_maps_key"
+            android:name="com.google.android.geo.API_KEY">
+        </meta-data>
 
         <activity
             android:name=".MapsActivity"
